Create Constatns file

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -28,7 +28,7 @@
                 <div class="api">
                     <h3 class="doc_title">API call:</h3>
                     <blockquote class="url">
-                        api.openweathermap.org/data/2.5/forecast/daily?q={city name},{country code}&cnt={cnt}
+                        api.openweathermap.org/data/2.5/forecast/daily?q={city name},{country code}&amp;cnt={cnt}
                     </blockquote>
                     <h3 class="doc_title">Parameters:</h3>
                     <h4>INPUT:</h4>
@@ -52,7 +52,7 @@
                         Call 7 days forecast by city name in XML format and metric units 
                     </div>
                     <blockquote class="url">
-                         api.openweathermap.org/data/2.5/forecast/daily?q=London&mode=xml&units=metric&cnt=7
+                         api.openweathermap.org/data/2.5/forecast/daily?q=London&amp;mode=xml&amp;units=metric&amp;cnt=7
                     </blockquote>
                     <div class="response">
                         {"cod":"200","message":0.0032,
