--- a/src/main/webapp/error.html
+++ b/src/main/webapp/error.html
@@ -10,12 +10,12 @@
 </head>
 <body>
   <header>
-    <div id="logo"></div>
+    <a href="."><div id="logo"></div></a>
     <div id="slogan">ПОШТОВІ ІНДЕКСИ УКРАЇНИ</div>
   </header>
   <nav>
     <ul>
-      <a href="index.html"><li class="selected-nav">Головна</li></a>
+      <a href="index.html"><li>Головна</li></a>
       <a href="example"><li>Поштові індекси</li></a>
     </ul>
   </nav>
