Add new fields <code> and uses of them

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -26,7 +26,7 @@
       UA Postal codes - це RESTfull сервіс, за допомогою якого можна
       отримати інформацію по поштових індексах України, а також
       інформацію по областях, районах та населених пунктах. Передача
-      інформації здійснюється у JSON форматі. Дані взято із ресурсу: <a
+      інформації здійснюється у JSON форматі. Дані взято із ресурсу: <a class="link"
         href="http://ukrindex.ru" target="_blank">http://ukrindex.ru</a>
     </p>
   </div>
@@ -39,34 +39,42 @@
       <blockquote class="url">UAPostcodes/api/regions</blockquote>
       <h3 class="doc_title">Параметри:</h3>
       <h4>Вихідні:</h4>
-      <span class="param">id</span> - ідентифікатор області (відповідає
-      порядковому номеру області)<br> <span class="param">name</span>
-      - назва області <br>
+      <span class="param">id</span> - унікальний ідентифікатор області
+      (внутрішній індекс представлення в програмі)<br> <span
+        class="param">name</span>- назва області <br> <span
+        class="param">code</span> - порядковий номер області <br>
     </div>
     <div class="example">
       <div class="example_title">Приклад</div>
       <div class="action">Отримати всі області України</div>
       <blockquote class="url">UAPostcodes/api/regions</blockquote>
       <div class="response">[{"id":"1", "name":"Автономна
-        республіка Крим"}, {"id":"2", "name":"Вінницька область"},
-        {"id":"3", "name":"Волинська область"}, {"id":"4",
-        "name":"Дніпропетровська область"}, {"id":"5", "name":"Донецька
-        область"}, {"id":"6", "name":"Житомирська область"}, {"id":"7",
-        "name":"Закарпатська область"}, {"id":"8", "name":"Запорізька
-        область"}, {"id":"9", "name":"Івано-Франківська область"},
-        {"id":"10", "name":"Київ, місто"}, {"id":"11", "name":"Київська
-        область"}, {"id":"12", "name":"Кіровоградська область"},
-        {"id":"13", "name":"Луганська область"}, {"id":"14",
-        "name":"Львівська область"}, {"id":"15", "name":"Миколаївська
-        область"}, {"id":"16", "name":"Одеська область"}, {"id":"17",
-        "name":"Полтавська область"}, {"id":"18", "name":"Рівненська
-        область"}, {"id":"19", "name":"Севастополь, місто"}, {"id":"20",
-        "name":"Сумська область"}, {"id":"21", "name":"Тернопільська
-        область"}, {"id":"22", "name":"Харківська область"}, {"id":"23",
-        "name":"Херсонська область"}, {"id":"24", "name":"Хмельницька
-        область"}, {"id":"25", "name":"Черкаська область"}, {"id":"26",
-        "name":"Чернівецька область"}, {"id":"27", "name":"Чернігівська
-        область"}]</div>
+        республіка Крим", "code":"1"}, {"id":"2", "name":"Вінницька
+        область", "code":"2"}, {"id":"3", "name":"Волинська область",
+        "code":"3"}, {"id":"4", "name":"Дніпропетровська область",
+        "code":"4"}, {"id":"5", "name":"Донецька область", "code":"5"},
+        {"id":"6", "name":"Житомирська область", "code":"6"}, {"id":"7",
+        "name":"Закарпатська область", "code":"7"}, {"id":"8",
+        "name":"Запорізька область", "code":"8"}, {"id":"9",
+        "name":"Івано-Франківська область", "code":"9"}, {"id":"10",
+        "name":"Київ, місто", "code":"10"}, {"id":"11", "name":"Київська
+        область", "code":"11"}, {"id":"12", "name":"Кіровоградська
+        область", "code":"12"}, {"id":"13", "name":"Луганська область",
+        "code":"13"}, {"id":"14", "name":"Львівська область",
+        "code":"14"}, {"id":"15", "name":"Миколаївська область",
+        "code":"15"}, {"id":"16", "name":"Одеська область",
+        "code":"16"}, {"id":"17", "name":"Полтавська область",
+        "code":"17"}, {"id":"18", "name":"Рівненська область",
+        "code":"18"}, {"id":"19", "name":"Севастополь, місто",
+        "code":"19"}, {"id":"20", "name":"Сумська область",
+        "code":"20"}, {"id":"21", "name":"Тернопільська область",
+        "code":"21"}, {"id":"22", "name":"Харківська область",
+        "code":"22"}, {"id":"23", "name":"Херсонська область",
+        "code":"23"}, {"id":"24", "name":"Хмельницька область",
+        "code":"24"}, {"id":"25", "name":"Черкаська область",
+        "code":"25"}, {"id":"26", "name":"Чернівецька область",
+        "code":"26"}, {"id":"27", "name":"Чернігівська область",
+        "code":"27"}]</div>
     </div>
   </div>
 
@@ -78,36 +86,43 @@
       <blockquote class="url">UAPostcodes/api/districts?id={regionId}</blockquote>
       <h3 class="doc_title">Параметри:</h3>
       <h4>Вхідні:</h4>
-      <span class="param">regionId</span> - ідентифікатор області, якої
-      Ви бажаєте получити список районів.<br>
+      <span class="param">regionId</span> - унікальний ідентифікатор
+      області, якої Ви бажаєте получити список районів.<br>
       <h4>Вихідні:</h4>
-      <span class="param">id</span> - ідентифікатор району (відповідає
-      порядковому номеру усіх районів різних областей)<br> <span
-        class="param">name</span> - назва району<br>
+      <span class="param">id</span> - унікальний ідентифікатор району
+      (внутрішній індекс представлення в програмі)<br> <span
+        class="param">name</span> - назва району<br> <span
+        class="param">code</span> - порядковий номер району в середині
+      області <br>
     </div>
     <div class="example">
       <div class="example_title">Приклад</div>
       <div class="action">Отримати всі райони Львівської області</div>
       <blockquote class="url">UAPostcodes/api/districts?id=14</blockquote>
       <div class="response">[{"id":"287", "name":"Борислав,
-        місто"}, {"id":"288", "name":"Бродівський район"}, {"id":"289",
-        "name":"Буський район"}, {"id":"290", "name":"Городоцький
-        район"}, {"id":"291", "name":"Дрогобицький район"}, {"id":"292",
-        "name":"Жидачівський район"}, {"id":"293", "name":"Жовківський
-        район"}, {"id":"294", "name":"Золочівський район"}, {"id":"295",
-        "name":"Кам'янсько-Бузький"}, {"id":"296", "name":"Львів,
-        місто"}, {"id":"297", "name":"Миколаївський район"},
-        {"id":"298", "name":"Мостиський район"}, {"id":"299",
-        "name":"Перемишлянський район"}, {"id":"300",
-        "name":"Пустомитівський район"}, {"id":"301",
-        "name":"Радехівський район"}, {"id":"302", "name":"Самбірський
-        район"}, {"id":"303", "name":"Сколівський район"}, {"id":"304",
-        "name":"Сокальський район"}, {"id":"305",
-        "name":"Старосамбірський район"}, {"id":"306",
-        "name":"Стрийський район"}, {"id":"307", "name":"Трускавець,
-        місто"}, {"id":"308", "name":"Турківський район"}, {"id":"309",
-        "name":"Червоноград, місто"}, {"id":"310", "name":"Яворівський
-        район"}]</div>
+        місто", "code":"1"}, {"id":"288", "name":"Бродівський район",
+        "code":"2"}, {"id":"289", "name":"Буський район", "code":"3"},
+        {"id":"290", "name":"Городоцький район", "code":"4"},
+        {"id":"291", "name":"Дрогобицький район", "code":"5"},
+        {"id":"292", "name":"Жидачівський район", "code":"6"},
+        {"id":"293", "name":"Жовківський район", "code":"7"},
+        {"id":"294", "name":"Золочівський район", "code":"8"},
+        {"id":"295", "name":"Кам'янсько-Бузький", "code":"9"},
+        {"id":"296", "name":"Львів, місто", "code":"10"}, {"id":"297",
+        "name":"Миколаївський район", "code":"11"}, {"id":"298",
+        "name":"Мостиський район", "code":"12"}, {"id":"299",
+        "name":"Перемишлянський район", "code":"13"}, {"id":"300",
+        "name":"Пустомитівський район", "code":"14"}, {"id":"301",
+        "name":"Радехівський район", "code":"15"}, {"id":"302",
+        "name":"Самбірський район", "code":"16"}, {"id":"303",
+        "name":"Сколівський район", "code":"17"}, {"id":"304",
+        "name":"Сокальський район", "code":"18"}, {"id":"305",
+        "name":"Старосамбірський район", "code":"19"}, {"id":"306",
+        "name":"Стрийський район", "code":"20"}, {"id":"307",
+        "name":"Трускавець, місто", "code":"21"}, {"id":"308",
+        "name":"Турківський район", "code":"22"}, {"id":"309",
+        "name":"Червоноград, місто", "code":"23"}, {"id":"310",
+        "name":"Яворівський район", "code":"24"}]</div>
     </div>
   </div>
 
@@ -122,10 +137,13 @@
       <span class="param">districtId</span> - ідентифікатор району,
       список населених пунктів якого Ви бажаєте получити.<br>
       <h4>Вихідні:</h4>
-      <span class="param">id</span> - ідентифікатор населеного пункту (відповідає
-      порядковому номеру усіх міст різних районів, областей)<br> 
+      <span class="param">id</span> - унікальний ідентифікатор населеного пункту
+      (внутрішній індекс представлення в програмі)<br>
       <span class="param">name</span> - назва населеного пункту<br>
-      <span class="param">postcode</span> - поштовий індекс населеного пункту<br>
+      <span class="param">postcode</span> - поштовий індекс населеного
+      пункту<br>
+      <span class="param">code</span> - порядковий номер населеного пункту в середині
+      району <br>
     </div>
     <div class="example">
       <div class="example_title">Приклад</div>
@@ -174,13 +192,14 @@
         "postcode":"81222"}]</div>
     </div>
   </div>
-  
-    <div class="text_wrapper">
+
+  <div class="text_wrapper">
     <div class="description">Опис: Ще декілька корисних API (TODO)</div>
     <div class="api">
       <h3 class="doc_title">API виклик:</h3>
       <blockquote class="url">UAPostcodes/api/postcode?id={cityId}</blockquote>
-      <blockquote class="url">UAPostcodes/api/city?id={cityId} [Теж саме що й /postcode]</blockquote>
+      <blockquote class="url">UAPostcodes/api/city?id={cityId}
+        [Теж саме що й /postcode]</blockquote>
       <blockquote class="url">UAPostcodes/api/region?id={regionId}</blockquote>
       <blockquote class="url">UAPostcodes/api/district?id={districtId}</blockquote>
       <h3 class="doc_title">Параметри:</h3>
